fix: hide side-navigation on small screen

--- a/assets/sass/components/side-navigation.scss
+++ b/assets/sass/components/side-navigation.scss
@@ -1,3 +1,11 @@
+#side-navigation {
+  display: none;
+
+  @media #{$medium-and-up} {
+    display: block;
+  }
+}
+
 .table-of-contents {
   a {
     color: $primary-color;
